[package]
name = "containe_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
cgroups-rs = "0.3.4"
clap = { version = "4.5.19", features = ["derive"] }
flate2 = "1.0.34"
nix = { version = "0.29.0", features = [
    "feature",
    "fs",
    "hostname",
    "mount",
    "sched",
    "user",
] }
proc-macro2 = "1.0.86"
reqwest = { version = "0.12.8", features = ["blocking"] }
tar = "0.4.42"
tempfile = "3.13.0"
